--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             n1 = num1.value *1;
             n2 = num2.value *1;
             restult = n1+n2;
-            num3.value = result
+            num3.value = result;
         }
 
     </script>
